update .bash_profile and .ssh/config.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,11 +1,45 @@
-Host snsd
-	Hostname snsd.skku.edu
+Host arc
+	Hostname arc.snu.ac.kr
 	User	kkjknh2
+    IdentityFile ~/.ssh/gimnamho 
 
 Host github.com
 	Hostname ssh.github.com
     Port 443
+    IdentityFile ~/.ssh/gimnamho
 
-Host zynq
-	Hostname 115.145.211.112
+Host myzynq1
+	Hostname 147.46.174.222
 	User root
+
+Host myzynq2
+    Hostname 147.46.174.185
+    User root
+
+Host myzynq3
+    Hostname 147.46.174.182
+    User root
+
+Host gtzynq
+	Hostname 147.46.174.221
+	User root
+
+Host cnzynq1
+    Hostname 147.46.174.231
+    User root
+
+Host cnzynq2
+    Hostname 147.46.174.183
+    User root
+
+Host arcgate
+    Hostname 147.46.174.119
+    User arcuser
+    IdentityFile ~/.ssh/kkjknh2
+
+Host arc-gt
+    Hostname 147.46.114.121
+    User arc-gt   
+
+Host *
+    IdentityFile ~/.ssh/gimnamho
