--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,10 @@ Host arc
 	User	kkjknh2
     IdentityFile ~/.ssh/gimnamho 
 
+Host ws
+    Hostname 147.46.219.132
+    User workspace
+
 Host github.com
 	Hostname ssh.github.com
     Port 443
